--- a/lab1/phan2_bai3/style3.css
+++ b/lab1/phan2_bai3/style3.css
@@ -21,7 +21,7 @@ h2 {
 }
 
 nav {
-    padding: 0px;
+    padding: 5px 0px;
     margin: 0px;
     width: 100%;
     background-color: rgb(204, 153, 153);
