--- a/lab1/phan2_bai4/style4.css
+++ b/lab1/phan2_bai4/style4.css
@@ -1,4 +1,5 @@
 body {
+    font-family: Arial, Helvetica, sans-serif;
     margin: auto;
     width: 800px;
     background-color: rgb(255, 255, 255);
@@ -10,15 +11,24 @@ header {
 }
 
 .under-header {
+    height: 50px;
     background-color: rgb(0, 0, 255);
+    display: table;
+    width: 100%;
 }
 
-.under-header span {
+.under-header nav {
+    vertical-align: middle;
+    display: table-cell;
+    padding: 0px 40px;
+}
+
+.under-header nav span {
     padding: 10px;
 }
 
-nav {
-    margin: 0px;
+nav span a {
+    color: rgb(255, 255, 255);
 }
 
 ul {
@@ -27,24 +37,18 @@ ul {
 
 h1 {
     margin: 0px;
-    padding: 5px 10px;
+    padding: 0px 10px;
 }
 
 .container {
     display: flex;
 }
 
-/* .columns {
-    padding: 10px;
-} */
-
 .columns.column-1 {
-    background-color: violet;
     width: 250px;
 }
 
 .columns.column-2 {
-    background-color: aqua;
     width: 550px;
 }
 
@@ -76,5 +80,11 @@ h1 {
 }
 
 footer {
+    height: 50px;
     background-color: rgb(0, 0, 255);
+    text-align: center;
+}
+
+.padding-10 {
+    padding: 10px;
 }
