--- a/lab1/phan2_bai2/style2.css
+++ b/lab1/phan2_bai2/style2.css
@@ -1,9 +1,20 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+}
+
+.round {
+    -moz-border-radius: 10px;
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    -khtml-border-radius: 10px;
+    border: 5px solid;
+    border-color: #f00;
 }
 
 h1 {
     color: brown;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 h1.shadow {
@@ -25,6 +36,7 @@ p::first-letter {
     font-style: italic;
     font-size: 150%;
     text-decoration: underline;
+    font-weight: 500;
 }
 
 a.shadow {
@@ -44,7 +56,23 @@ table td {
     border: 1px solid #bbb;
 }
 
-table td{
+table td {
     padding: 5px 10px;
     text-align: center;
+}
+
+a.blue {
+    color: blue;
+}
+
+a.red {
+    color: red;
+}
+
+li {
+    margin-top: 10px;
+}
+
+nav {
+    margin-top: 30px;
 }
