--- a/lab1/phan2_bai5/style5.css
+++ b/lab1/phan2_bai5/style5.css
@@ -10,6 +10,10 @@ body {
 .all-container {
     width: 700px;
     background-color: #fff;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 header {
@@ -63,6 +67,7 @@ header h1 {
 
 footer {
     position: relative;
+    display: block;
 }
 
 footer p {
