--- a/lab1/phan2_bai5/style5.css
+++ b/lab1/phan2_bai5/style5.css
@@ -9,7 +9,7 @@ body {
 
 .all-container {
     width: 700px;
-    background-color: #fff;
+    background-color: rgb(255, 255, 255);
     min-height: 100vh;
     display: flex;
     flex-direction: column;
@@ -71,10 +71,14 @@ footer {
 }
 
 footer p {
-    color: #fff;
+    color: rgb(255, 255, 255);
     position: absolute;
     top: 40%;
     padding-left: 20px;
+}
+
+.bg-footer {
+    display: block;
 }
 
 .column-1 {
@@ -123,10 +127,10 @@ h2 {
 .column-2 nav p {
     margin: 0px;
     padding: 5px;
-    border-bottom: 1px solid #fff;
+    border-bottom: 2px solid rgb(227, 227, 227);
 }
 
 .column-2 nav a {
-    color: #000;
+    color: rgb(0, 0, 0);
     text-decoration: none;
 }
